Homepage UI. Implemented corrected font, box shadow and fixed button bug- now both buttons are visible.

--- a/homepageUI/styles.css
+++ b/homepageUI/styles.css
@@ -1,3 +1,4 @@
+
 .mainlogo-container-parent .img{
   position: relative;
   max-width: 100%;
@@ -24,7 +25,7 @@
   margin: -50px 0 0 -50px;
 }
 
-.top-header-cst {
+.top-header {
   background: #9EC2CC;
   padding: 40px 0px;
   margin: -1%;
@@ -35,18 +36,18 @@ max-width: 720px;
 max-height: fit-content;
 }
 
-.action button {
+.action .waiterbutton {
   width: 20%;
   height: 7.5%;
   border: none;
   padding: 18px;
-  font-family: 'Poppins-Regular', sans-serif;
+  font-family: 'Ravager Sans Regular';
   cursor: pointer;
   text-transform: uppercase;
   background: #9EC2CC;
   color: rgb(0, 0, 0);
   letter-spacing: 0.2px;
-  font-size: x-large;
+  font-size: xx-large;
   outline: 0;
   -webkit-transition: all .3s;
   transition: all .3s;
@@ -57,6 +58,30 @@ max-height: fit-content;
   top: 64%;
   left: 60%;
   box-shadow: 3px 3px 3px rgb(187, 187, 187)
+}
+
+.action .menubutton {
+width: 20%;
+height: 7.5%;
+border: none;
+padding: 18px;
+font-family: 'Ravager Sans Regular';
+cursor: pointer;
+text-transform: uppercase;
+background: #9EC2CC;
+color: rgb(0, 0, 0);
+letter-spacing: 0.2px;
+font-size: xx-large;
+outline: 0;
+-webkit-transition: all .3s;
+transition: all .3s;
+border-radius: 15px;
+margin: 10px;
+text-align: center;
+position: absolute;
+top: 64%;
+left: 20%;
+box-shadow: 3px 3px 3px rgb(187, 187, 187)
 }
 
 .toplogo-container-parent .img{
